release 1.10
- Fixed issue 773
  http://java.net/jira/browse/JERSEY-773
  Regression: WADL resurces base URI customization stopped working in Jersey 1.9
- Fixed issue 763
  http://java.net/jira/browse/JERSEY-763
  VfsSchemeScanner cannot be run in Jboss-7 environment
- *Breaking change*
  Grizzly 2 ServletHandler support separated out to a new, jersey-grizlly2-servlet, module
- *Breaking change*
  Ant task for generating WADL moved from jersey-server to a newly created contribs/ant-wadl-task module
- *Breaking change*
  Servlet, EJB and CDI integration separated out from the jersey-server module
  When using Jersey in a Servlet container, jersey-server dependency need to be replaced with jersey-servlet

release 1.9.1
- improved error checking on OAuthClientFilter - if the internal requests for tokens fail, it now propagates the failure (the response from the server) to the client rather than ignoring it and failing later on getAuthorizationUri() method.
- Fixed issue 765
  http://java.net/jira/browse/JERSEY-765
  Jersey can now marshall/unmarshall all the standard collection types (Set, Queue, LinkedList, etc.) and any custom ones with the default constructor.
- Fixed an issue in OAuthClientFilter causing it to ask for a new request token instead of resuming the authentication after the authentication flow gets suspended to retrieve the verifier code.
- Fixed issues 65, 166, 220
  http://java.net/jira/browse/JERSEY-65
  http://java.net/jira/browse/JERSEY-166
  http://java.net/jira/browse/JERSEY-220
  Extended the functionality of PostReplaceFilter to add support for:
    - specifying the overriding method in the query parameter (besides the existing header support)
    - configuration property, so that user can choose if both the header as well as the query param should be supported
    - converting form parameters to query parameters in case of overriding to GET
- Fixed issues 506 and 760
  http://java.net/jira/browse/JERSEY-506